Parallelize data generation

--- a/training_pool/Data_Generation_with_Precomputed_Inputs.ipynb
+++ b/training_pool/Data_Generation_with_Precomputed_Inputs.ipynb
@@ -25,13 +25,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-26T14:46:30.451651Z",
+     "start_time": "2017-09-26T14:46:30.139948Z"
+    },
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "from main_gen import gen_input_data, gen_features"
+    "import multiprocessing\n",
+    "from main_gen import gen_input_data, gen_features\n",
+    "import os.path"
    ]
   },
   {
@@ -45,6 +51,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-26T14:46:40.485060Z",
+     "start_time": "2017-09-26T14:46:40.468543Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -85,9 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "ExecuteTime": {
+     "start_time": "2017-09-26T15:31:20.719Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,11 +111,16 @@
     "tau_syn = 5 #ms\n",
     "time_ij = 0 #ms\n",
     "syn_ratio = 0.001 #ratio of synaptic kernel (postsynaptic potential) that is negligible\n",
-    "data_set = 100000 #number of data sets required\n",
+    "data_set = 20000 #number of data sets required\n",
+    "n_cores = 6 #number of cores to use. 6-7 is about as much as the writing speed of a hard disk drive can handle\n",
     "\n",
-    "for seed in range(data_set):\n",
-    "    data, presyn_input, markers, n_fea_occur, fea_time, fea_order = gen_input_data(seed, features, T_null, n, fr, dt, tau_mem, tau_syn, time_ij, syn_ratio, n_fea, T_fea, cf_mean, marker_y, marker_height)\n",
-    "    np.savez(\"data/data_\"+str(seed), data, presyn_input, markers, n_fea_occur, fea_time, fea_order) \n"
+    "def data_gen(seed):\n",
+    "    if not os.path.exists(\"data/data_\" + str(seed) + \".npz\"):\n",
+    "        data, presyn_input, markers, n_fea_occur, fea_time, fea_order = gen_input_data(seed, features, T_null, n, fr, dt, tau_mem, tau_syn, time_ij, syn_ratio, n_fea, T_fea, cf_mean, marker_y, marker_height)\n",
+    "        np.savez(\"data/data_\"+str(seed), data, presyn_input, markers, n_fea_occur, fea_time, fea_order) \n",
+    "    \n",
+    "with multiprocessing.Pool(n_cores) as pool:\n",
+    "    pool.map(data_gen, range(data_set))"
    ]
   }
  ],
@@ -123,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
