Monitoring output during data generation.

--- a/training_pool/Data_Generation_with_Precomputed_Inputs.ipynb
+++ b/training_pool/Data_Generation_with_Precomputed_Inputs.ipynb
@@ -26,8 +26,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-26T14:46:30.451651Z",
-     "start_time": "2017-09-26T14:46:30.139948Z"
+     "end_time": "2017-09-27T11:56:59.661345Z",
+     "start_time": "2017-09-27T11:56:59.228841Z"
     },
     "collapsed": true
    },
@@ -37,7 +37,8 @@
     "import numpy as np\n",
     "import multiprocessing\n",
     "from main_gen import gen_input_data, gen_features\n",
-    "import os.path"
+    "import os.path\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
@@ -52,8 +53,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-26T14:46:40.485060Z",
-     "start_time": "2017-09-26T14:46:40.468543Z"
+     "end_time": "2017-09-27T11:57:00.117184Z",
+     "start_time": "2017-09-27T11:57:00.090308Z"
     },
     "collapsed": true
    },
@@ -95,13 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-09-26T15:31:20.719Z"
+     "end_time": "2017-09-27T11:57:38.852899Z",
+     "start_time": "2017-09-27T11:57:12.267247Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating data for seed 19999.\n"
+     ]
+    }
+   ],
    "source": [
     "cf_mean = 2 #mean number of occurrences for each feature\n",
     "T_null = 0.5 #background activity duration (s)\n",
@@ -112,15 +122,21 @@
     "time_ij = 0 #ms\n",
     "syn_ratio = 0.001 #ratio of synaptic kernel (postsynaptic potential) that is negligible\n",
     "data_set = 20000 #number of data sets required\n",
-    "n_cores = 6 #number of cores to use. 6-7 is about as much as the writing speed of a hard disk drive can handle\n",
+    "n_cores = 1 #number of cores to use. 6-7 is about as much as the writing speed of a hard disk drive can handle\n",
     "\n",
     "def data_gen(seed):\n",
     "    if not os.path.exists(\"data/data_\" + str(seed) + \".npz\"):\n",
     "        data, presyn_input, markers, n_fea_occur, fea_time, fea_order = gen_input_data(seed, features, T_null, n, fr, dt, tau_mem, tau_syn, time_ij, syn_ratio, n_fea, T_fea, cf_mean, marker_y, marker_height)\n",
     "        np.savez(\"data/data_\"+str(seed), data, presyn_input, markers, n_fea_occur, fea_time, fea_order) \n",
-    "    \n",
-    "with multiprocessing.Pool(n_cores) as pool:\n",
-    "    pool.map(data_gen, range(data_set))"
+    "\n",
+    "if n_cores > 1:\n",
+    "    with multiprocessing.Pool(n_cores) as pool:\n",
+    "        pool.map(data_gen, range(data_set))\n",
+    "else:\n",
+    "    for seed in range(data_set):\n",
+    "        clear_output(wait=True)\n",
+    "        data_gen(seed)\n",
+    "        print(\"Generating data for seed {}.\".format(seed))"
    ]
   }
  ],
