--- a/Theta_Critical_Gradient_Algorithm.ipynb
+++ b/Theta_Critical_Gradient_Algorithm.ipynb
@@ -18,18 +18,27 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T11:48:08.984377Z",
+     "start_time": "2017-09-27T11:48:08.980237Z"
+    },
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy import optimize"
+    "from scipy import optimize\n",
+    "rtol = 1e-5  # Default value from np.isclose"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:36.282394Z",
+     "start_time": "2017-09-27T10:16:36.276344Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -42,8 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:36.728860Z",
+     "start_time": "2017-09-27T10:16:36.696311Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -70,8 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:37.047943Z",
+     "start_time": "2017-09-27T10:16:37.028128Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -92,8 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:37.277735Z",
+     "start_time": "2017-09-27T10:16:37.238096Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -117,8 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:37.552589Z",
+     "start_time": "2017-09-27T10:16:37.549398Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -130,8 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T11:48:09.007500Z",
+     "start_time": "2017-09-27T11:48:08.986501Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -143,15 +172,19 @@
     "        theta_spikes = num_spikes + 1\n",
     "    theta_list, spike_list = bisect(unweighted_input, theta_spikes, theta_range, smallest_range, omega)\n",
     "    theta_critical_range = optimize.root(root_fun, [theta_list[spike_list.index(theta_spikes)-1], theta_list[spike_list.index(theta_spikes)]], args=(unweighted_input, omega)).x \n",
-    "    num_spikes, spike_time, unresetted_V = STS(unweighted_input, theta_critical_range[1] - 1e-10, omega)\n",
+    "    num_spikes, spike_time, unresetted_V = STS(unweighted_input, theta_critical_range[1] * (1-rtol), omega)\n",
     "    t_star_list = spike_time[:unresetted_V.index(min(unresetted_V))+1]\n",
     "    return theta_critical_range[1], t_star_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:38.507001Z",
+     "start_time": "2017-09-27T10:16:38.440321Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -196,8 +229,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:39.185047Z",
+     "start_time": "2017-09-27T10:16:39.162603Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -216,8 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:39.752831Z",
+     "start_time": "2017-09-27T10:16:39.745518Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -229,8 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:40.304614Z",
+     "start_time": "2017-09-27T10:16:40.299464Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -241,8 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:40.950075Z",
+     "start_time": "2017-09-27T10:16:40.935258Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -259,8 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:41.428179Z",
+     "start_time": "2017-09-27T10:16:41.415871Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -275,8 +328,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:41.933121Z",
+     "start_time": "2017-09-27T10:16:41.926903Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -287,8 +344,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:42.415217Z",
+     "start_time": "2017-09-27T10:16:42.407232Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -302,8 +363,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:43.326425Z",
+     "start_time": "2017-09-27T10:16:43.320852Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -314,8 +379,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:43.896621Z",
+     "start_time": "2017-09-27T10:16:43.888270Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -329,8 +398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:44.580150Z",
+     "start_time": "2017-09-27T10:16:44.568368Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -344,8 +417,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:45.226991Z",
+     "start_time": "2017-09-27T10:16:45.222641Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -356,8 +433,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:45.824440Z",
+     "start_time": "2017-09-27T10:16:45.809422Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -373,8 +454,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:16:46.397451Z",
+     "start_time": "2017-09-27T10:16:46.383485Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -390,9 +475,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2017-09-27T12:22:26.656815Z",
+     "start_time": "2017-09-27T12:22:26.588974Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -400,8 +488,13 @@
     "    cur_omega_list = []\n",
     "    for cycle in range(n_cycles):\n",
     "        for trial in range(cycle*100, cycle*100+100):\n",
-    "            idx = int(np.random.random()*data_sets)\n",
-    "            input_data = np.load(\"data/data_\"+str(idx)+\".npz\")\n",
+    "            input_data = None\n",
+    "            while input_data is None:\n",
+    "                idx = int(np.random.random()*data_sets)\n",
+    "                try:\n",
+    "                    input_data = np.load(\"data/data_\"+str(idx)+\".npz\")\n",
+    "                except (FileNotFoundError, BadZipFile):\n",
+    "                    pass\n",
     "            data, presyn_input, markers, n_fea_occur, fea_time, fea_order = input_data['arr_0'], input_data['arr_1'], input_data['arr_2'], input_data['arr_3'], input_data['arr_4'], input_data['arr_5']\n",
     "            desired_spikes = n_fea_occur[fea_idx] #+ n_fea_occur[fea_idx+1]*2 + n_fea_occur[fea_idx+2]*3 + n_fea_occur[fea_idx+3]*4 + n_fea_occur[fea_idx+4]*5\n",
     "            V_t, spike_time = calculate_Vt(presyn_input, theta, current_omega)\n",
@@ -448,8 +541,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-27T10:17:33.719653Z",
+     "start_time": "2017-09-27T10:17:33.687123Z"
+    },
     "collapsed": true
    },
    "outputs": [],
@@ -506,7 +603,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "start_time": "2017-09-27T12:22:41.246Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -536,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
