Added desired_fea function and different types of training

--- a/Theta_Critical_Gradient_Algorithm.ipynb
+++ b/Theta_Critical_Gradient_Algorithm.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy import optimize"
+    "from scipy import optimize\n",
+    "rtol = 1e-5 # rtol from numpy.isclose"
    ]
   },
   {
@@ -42,6 +43,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def desired_fea(n_fea, desired_n, cond = 0, multi = 0):\n",
+    "    fea_num = np.zeros(n_fea)\n",
+    "    for i in range(desired_n):\n",
+    "        if cond:\n",
+    "            if multi:\n",
+    "                fea_num[i] = multi\n",
+    "            else:\n",
+    "                fea_num[i] = i + 1\n",
+    "        else:\n",
+    "            fea_num[i] = 1\n",
+    "    return fea_num"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": true
@@ -49,7 +71,6 @@
    "outputs": [],
    "source": [
     "def STS(unweighted_input, theta, omega):\n",
-    "    num_spikes = 0\n",
     "    spike_time = []\n",
     "    unresetted_V = []\n",
     "    datalen = unweighted_input.shape[1]\n",
@@ -60,34 +81,11 @@
     "        if spike_idx == -1:\n",
     "            done = True\n",
     "        else:\n",
-    "            num_spikes += 1\n",
     "            spike_time.append(spike_idx)\n",
     "            unresetted_V.append(V[spike_idx])\n",
     "            mem_len = min(ref_memory_len, datalen - spike_idx)\n",
     "            V[spike_idx:spike_idx+mem_len] -= theta * ref_kernel[:mem_len]\n",
-    "    return num_spikes, spike_time, unresetted_V"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def max_Vt(unweighted_input, theta, omega):\n",
-    "    datalen = unweighted_input.shape[1]\n",
-    "    V = (omega[:,np.newaxis] * unweighted_input).sum(axis=0)\n",
-    "    done = False\n",
-    "    while not done:\n",
-    "        spike_idx = find_first_spike(V, theta)\n",
-    "        if spike_idx == -1:\n",
-    "            done = True\n",
-    "        else:\n",
-    "            mem_len = min(ref_memory_len, datalen - spike_idx)\n",
-    "            V[spike_idx:spike_idx+mem_len] -= theta * ref_kernel[:mem_len]\n",
-    "    return max(V)"
+    "    return spike_time, unresetted_V, max(V)"
    ]
   },
   {
@@ -103,7 +101,7 @@
     "    high = STS(unweighted_input, theta_range[0], omega)\n",
     "    medium = STS(unweighted_input, sum(theta_range)/2, omega)\n",
     "    low = STS(unweighted_input, theta_range[1], omega)\n",
-    "    spike_list = [high[0], medium[0], low[0]]\n",
+    "    spike_list = [len(high[0]), len(medium[0]), len(low[0])]\n",
     "    if theta_list[2] - theta_list[0] >= smallest_range:\n",
     "        if theta_spikes <= spike_list[0] and theta_spikes > spike_list[1]:\n",
     "            theta_range = [theta_list[0], theta_list[1]]\n",
@@ -124,7 +122,7 @@
    "outputs": [],
    "source": [
     "def root_fun(theta_range, unweighted_input, omega):\n",
-    "    V_max = max_Vt(unweighted_input, theta_range[0], omega)\n",
+    "    V_max = STS(unweighted_input, theta_range[0], omega)[2]\n",
     "    return [theta_range[0] - V_max, V_max - theta_range[1]]"
    ]
   },
@@ -143,7 +141,7 @@
     "        theta_spikes = num_spikes + 1\n",
     "    theta_list, spike_list = bisect(unweighted_input, theta_spikes, theta_range, smallest_range, omega)\n",
     "    theta_critical_range = optimize.root(root_fun, [theta_list[spike_list.index(theta_spikes)-1], theta_list[spike_list.index(theta_spikes)]], args=(unweighted_input, omega)).x \n",
-    "    num_spikes, spike_time, unresetted_V = STS(unweighted_input, theta_critical_range[1] - 1e-10, omega)\n",
+    "    spike_time, unresetted_V, max_V = STS(unweighted_input, theta_critical_range[1] * (1 - rtol), omega)\n",
     "    t_star_list = spike_time[:unresetted_V.index(min(unresetted_V))+1]\n",
     "    return theta_critical_range[1], t_star_list"
    ]
@@ -403,7 +401,7 @@
     "            idx = int(np.random.random()*data_sets)\n",
     "            input_data = np.load(\"data/data_\"+str(idx)+\".npz\")\n",
     "            data, presyn_input, markers, n_fea_occur, fea_time, fea_order = input_data['arr_0'], input_data['arr_1'], input_data['arr_2'], input_data['arr_3'], input_data['arr_4'], input_data['arr_5']\n",
-    "            desired_spikes = n_fea_occur[fea_idx] #+ n_fea_occur[fea_idx+1]*2 + n_fea_occur[fea_idx+2]*3 + n_fea_occur[fea_idx+3]*4 + n_fea_occur[fea_idx+4]*5\n",
+    "            desired_spikes = sum(n_fea_occur * fea_idx)\n",
     "            V_t, spike_time = calculate_Vt(presyn_input, theta, current_omega)\n",
     "            tot_input = (current_omega[:,np.newaxis] * presyn_input).sum(axis=0)\n",
     "            num_spikes = len(spike_time)\n",
@@ -492,14 +490,28 @@
     "current_omega: intial omega\n",
     "n_cycles: number of training cycles required\n",
     "data_sets: available number of precomputed data sets in the pool\n",
-    "fea_idx: index of feature that the multispike tempotron has to identify\n",
+    "fea_idx: indices of features that the multispike tempotron has to identify\n",
     "learning_rate: the size of update after each error trial\n",
     "\n",
     "Notes:\n",
     "\n",
-    "For identification of different features with different number of spikes, uncomment the second half of the 8th line (desired_spikes).\n",
-    "\n",
     "The learning_rate of 0.00001 was chosen according to the original publication (Robert Gütig, 2016)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.1 Identification of one feature with one spike "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The desired_fea function is used to generate a list of desired feature numbers.\n",
+    "\n",
+    "To generate one spike to identify only one feature, set desired_n to 1 and cond to 0."
    ]
   },
   {
@@ -512,11 +524,155 @@
    "source": [
     "n_cycles = 1000\n",
     "data_sets = 19999\n",
-    "fea_idx = 0\n",
     "learning_rate = 0.00001\n",
+    "n_fea = 10 # Total number of features and distractors\n",
+    "desired_n = 1 # Number of desired features\n",
     "\n",
-    "latest_omegaMulti_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
-    "np.save(\"latest_omegaMulti_list\", latest_omegaMulti_list)"
+    "# To generate a list of desired feature indices\n",
+    "fea_idx = desired_fea(n_fea, desired_n, cond = 0, multi = 0) \n",
+    "\n",
+    "latest_omega1F1S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
+    "np.save(\"latest_omega1F1S_list\", latest_omega1F1S_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.2 Identification of one feature with multiple spikes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To generate multiple spikes to identify one feature, set desired_n to 1, cond to 1, and multi to the desired number of spikes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_cycles = 1000\n",
+    "data_sets = 19999\n",
+    "learning_rate = 0.00001\n",
+    "n_fea = 10 # Total number of features and distractors\n",
+    "desired_n = 1 # Number of desired features\n",
+    "\n",
+    "# To generate a list of desired feature indices\n",
+    "fea_idx = desired_fea(n_fea, desired_n, cond = 1, multi = 5) \n",
+    "\n",
+    "latest_omega1F5S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
+    "np.save(\"latest_omega1F5S_list\", latest_omega1F5S_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.3 Identification of multiple features with one spike per feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To generate one spike to identify multiple features, set desired_n to the number of desired features and cond to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_cycles = 1000\n",
+    "data_sets = 19999\n",
+    "learning_rate = 0.00001\n",
+    "n_fea = 10 # Total number of features and distractors\n",
+    "desired_n = 5 # Number of desired features\n",
+    "\n",
+    "# To generate a list of desired feature indices\n",
+    "fea_idx = desired_fea(n_fea, desired_n, cond = 0, multi = 0) \n",
+    "\n",
+    "latest_omega5F1S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
+    "np.save(\"latest_omega5F1S_list\", latest_omega5F1S_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.4 Identification of multiple features with different number of spikes for different features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To generate different number of spikes to identify different features, set desired_n to the number of desired features, cond to 1, and multi to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_cycles = 1000\n",
+    "data_sets = 19999\n",
+    "learning_rate = 0.00001\n",
+    "n_fea = 10 # Total number of features and distractors\n",
+    "desired_n = 5 # Number of desired features\n",
+    "\n",
+    "# To generate a list of desired feature indices\n",
+    "fea_idx = desired_fea(n_fea, desired_n, cond = 1, multi = 0) \n",
+    "\n",
+    "latest_omega5FmS_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
+    "np.save(\"latest_omega5FmS_list\", latest_omega5FmS_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.5 Identification of multiple features with a fixed number of spikes (> 1) for each feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To generate a fixed number of spikes that is greater than 1 for multiple features, set desired_n to the number of desired features, cond to 1, and multi to desired number of spikes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_cycles = 1000\n",
+    "data_sets = 19999\n",
+    "learning_rate = 0.00001\n",
+    "n_fea = 10 # Total number of features and distractors\n",
+    "desired_n = 5 # Number of desired features\n",
+    "\n",
+    "# To generate a list of desired feature indices\n",
+    "fea_idx = desired_fea(n_fea, desired_n, cond = 1, multi = 5) \n",
+    "\n",
+    "latest_omega5F5S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
+    "np.save(\"latest_omega5F5S_list\", latest_omega5F5S_list)"
    ]
   }
  ],
