Import BadZipFile. Monitor training.

--- a/Theta_Critical_Gradient_Algorithm.ipynb
+++ b/Theta_Critical_Gradient_Algorithm.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T11:48:08.984377Z",
-     "start_time": "2017-09-27T11:48:08.980237Z"
+     "end_time": "2017-09-27T14:03:31.025232Z",
+     "start_time": "2017-09-27T14:03:30.733713Z"
     },
     "collapsed": true
    },
@@ -28,7 +28,9 @@
    "source": [
     "import numpy as np\n",
     "from scipy import optimize\n",
-    "rtol = 1e-5  # Default value from np.isclose"
+    "rtol = 1e-5  # Default value from np.isclose\n",
+    "from zipfile import BadZipFile\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
@@ -36,8 +38,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:36.282394Z",
-     "start_time": "2017-09-27T10:16:36.276344Z"
+     "end_time": "2017-09-27T14:03:31.059135Z",
+     "start_time": "2017-09-27T14:03:31.055356Z"
     },
     "collapsed": true
    },
@@ -54,8 +56,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:36.728860Z",
-     "start_time": "2017-09-27T10:16:36.696311Z"
+     "end_time": "2017-09-27T14:03:31.297430Z",
+     "start_time": "2017-09-27T14:03:31.264984Z"
     },
     "collapsed": true
    },
@@ -86,8 +88,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:37.047943Z",
-     "start_time": "2017-09-27T10:16:37.028128Z"
+     "end_time": "2017-09-27T14:03:31.532320Z",
+     "start_time": "2017-09-27T14:03:31.512502Z"
     },
     "collapsed": true
    },
@@ -112,8 +114,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:37.277735Z",
-     "start_time": "2017-09-27T10:16:37.238096Z"
+     "end_time": "2017-09-27T14:03:31.845114Z",
+     "start_time": "2017-09-27T14:03:31.800609Z"
     },
     "collapsed": true
    },
@@ -141,8 +143,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:37.552589Z",
-     "start_time": "2017-09-27T10:16:37.549398Z"
+     "end_time": "2017-09-27T14:03:32.141422Z",
+     "start_time": "2017-09-27T14:03:32.135739Z"
     },
     "collapsed": true
    },
@@ -155,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T11:48:09.007500Z",
-     "start_time": "2017-09-27T11:48:08.986501Z"
+     "end_time": "2017-09-27T14:03:32.532687Z",
+     "start_time": "2017-09-27T14:03:32.511994Z"
     },
     "collapsed": true
    },
@@ -182,8 +184,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:38.507001Z",
-     "start_time": "2017-09-27T10:16:38.440321Z"
+     "end_time": "2017-09-27T14:03:33.133346Z",
+     "start_time": "2017-09-27T14:03:33.065121Z"
     },
     "collapsed": true
    },
@@ -232,8 +234,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:39.185047Z",
-     "start_time": "2017-09-27T10:16:39.162603Z"
+     "end_time": "2017-09-27T14:03:33.671336Z",
+     "start_time": "2017-09-27T14:03:33.656684Z"
     },
     "collapsed": true
    },
@@ -256,8 +258,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:39.752831Z",
-     "start_time": "2017-09-27T10:16:39.745518Z"
+     "end_time": "2017-09-27T14:03:34.238267Z",
+     "start_time": "2017-09-27T14:03:34.232814Z"
     },
     "collapsed": true
    },
@@ -273,8 +275,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:40.304614Z",
-     "start_time": "2017-09-27T10:16:40.299464Z"
+     "end_time": "2017-09-27T14:03:34.705108Z",
+     "start_time": "2017-09-27T14:03:34.699760Z"
     },
     "collapsed": true
    },
@@ -289,8 +291,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:40.950075Z",
-     "start_time": "2017-09-27T10:16:40.935258Z"
+     "end_time": "2017-09-27T14:03:35.264781Z",
+     "start_time": "2017-09-27T14:03:35.250200Z"
     },
     "collapsed": true
    },
@@ -311,8 +313,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:41.428179Z",
-     "start_time": "2017-09-27T10:16:41.415871Z"
+     "end_time": "2017-09-27T14:03:35.760406Z",
+     "start_time": "2017-09-27T14:03:35.747639Z"
     },
     "collapsed": true
    },
@@ -331,8 +333,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:41.933121Z",
-     "start_time": "2017-09-27T10:16:41.926903Z"
+     "end_time": "2017-09-27T14:03:36.191170Z",
+     "start_time": "2017-09-27T14:03:36.184731Z"
     },
     "collapsed": true
    },
@@ -347,8 +349,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:42.415217Z",
-     "start_time": "2017-09-27T10:16:42.407232Z"
+     "end_time": "2017-09-27T14:03:36.615563Z",
+     "start_time": "2017-09-27T14:03:36.607353Z"
     },
     "collapsed": true
    },
@@ -366,8 +368,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:43.326425Z",
-     "start_time": "2017-09-27T10:16:43.320852Z"
+     "end_time": "2017-09-27T14:03:37.045091Z",
+     "start_time": "2017-09-27T14:03:37.039506Z"
     },
     "collapsed": true
    },
@@ -382,8 +384,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:43.896621Z",
-     "start_time": "2017-09-27T10:16:43.888270Z"
+     "end_time": "2017-09-27T14:03:37.475383Z",
+     "start_time": "2017-09-27T14:03:37.465907Z"
     },
     "collapsed": true
    },
@@ -401,8 +403,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:44.580150Z",
-     "start_time": "2017-09-27T10:16:44.568368Z"
+     "end_time": "2017-09-27T14:03:40.366085Z",
+     "start_time": "2017-09-27T14:03:40.353523Z"
     },
     "collapsed": true
    },
@@ -420,8 +422,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:45.226991Z",
-     "start_time": "2017-09-27T10:16:45.222641Z"
+     "end_time": "2017-09-27T14:03:40.501620Z",
+     "start_time": "2017-09-27T14:03:40.497172Z"
     },
     "collapsed": true
    },
@@ -436,8 +438,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:45.824440Z",
-     "start_time": "2017-09-27T10:16:45.809422Z"
+     "end_time": "2017-09-27T14:03:40.677096Z",
+     "start_time": "2017-09-27T14:03:40.664157Z"
     },
     "collapsed": true
    },
@@ -457,8 +459,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:16:46.397451Z",
-     "start_time": "2017-09-27T10:16:46.383485Z"
+     "end_time": "2017-09-27T14:03:40.949835Z",
+     "start_time": "2017-09-27T14:03:40.935349Z"
     },
     "collapsed": true
    },
@@ -475,12 +477,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T12:22:26.656815Z",
-     "start_time": "2017-09-27T12:22:26.588974Z"
-    }
+     "end_time": "2017-09-27T14:03:41.366301Z",
+     "start_time": "2017-09-27T14:03:41.266214Z"
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -488,14 +491,16 @@
     "    cur_omega_list = []\n",
     "    for cycle in range(n_cycles):\n",
     "        for trial in range(cycle*100, cycle*100+100):\n",
+    "            clear_output(wait=True)\n",
+    "            print(\"Cycle {}, trial {}.\".format(cycle, trial))\n",
     "            input_data = None\n",
     "            while input_data is None:\n",
     "                idx = int(np.random.random()*data_sets)\n",
     "                try:\n",
     "                    input_data = np.load(\"data/data_\"+str(idx)+\".npz\")\n",
-    "                except (FileNotFoundError, BadZipFile):\n",
+    "                    data, presyn_input, markers, n_fea_occur, fea_time, fea_order = input_data['arr_0'], input_data['arr_1'], input_data['arr_2'], input_data['arr_3'], input_data['arr_4'], input_data['arr_5']\n",
+    "                except (FileNotFoundError, BadZipFile, KeyError):\n",
     "                    pass\n",
-    "            data, presyn_input, markers, n_fea_occur, fea_time, fea_order = input_data['arr_0'], input_data['arr_1'], input_data['arr_2'], input_data['arr_3'], input_data['arr_4'], input_data['arr_5']\n",
     "            desired_spikes = n_fea_occur[fea_idx] #+ n_fea_occur[fea_idx+1]*2 + n_fea_occur[fea_idx+2]*3 + n_fea_occur[fea_idx+3]*4 + n_fea_occur[fea_idx+4]*5\n",
     "            V_t, spike_time = calculate_Vt(presyn_input, theta, current_omega)\n",
     "            tot_input = (current_omega[:,np.newaxis] * presyn_input).sum(axis=0)\n",
@@ -544,8 +549,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-27T10:17:33.719653Z",
-     "start_time": "2017-09-27T10:17:33.687123Z"
+     "end_time": "2017-09-27T14:03:45.224769Z",
+     "start_time": "2017-09-27T14:03:45.151404Z"
     },
     "collapsed": true
    },
@@ -604,10 +609,18 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-09-27T12:22:41.246Z"
+     "start_time": "2017-09-27T14:03:52.304Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 116, trial 11621.\n"
+     ]
+    }
+   ],
    "source": [
     "n_cycles = 1000\n",
     "data_sets = 19999\n",
