Added Alex's changes

--- a/Theta_Critical_Gradient_Algorithm.ipynb
+++ b/Theta_Critical_Gradient_Algorithm.ipynb
@@ -24,7 +24,9 @@
    "source": [
     "import numpy as np\n",
     "from scipy import optimize\n",
-    "rtol = 1e-5 # rtol from numpy.isclose"
+    "rtol = 1e-5 # rtol from numpy.isclose\n",
+    "from zipfile import BadZipFile\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
@@ -398,9 +400,16 @@
     "    cur_omega_list = []\n",
     "    for cycle in range(n_cycles):\n",
     "        for trial in range(cycle*100, cycle*100+100):\n",
-    "            idx = int(np.random.random()*data_sets)\n",
-    "            input_data = np.load(\"data/data_\"+str(idx)+\".npz\")\n",
-    "            data, presyn_input, markers, n_fea_occur, fea_time, fea_order = input_data['arr_0'], input_data['arr_1'], input_data['arr_2'], input_data['arr_3'], input_data['arr_4'], input_data['arr_5']\n",
+    "            clear_output(wait=True)\n",
+    "            print(\"Cycle {}, trial {}.\".format(cycle, trial))\n",
+    "            input_data = None\n",
+    "            while input_data is None:\n",
+    "                idx = int(np.random.random()*data_sets)\n",
+    "                try:\n",
+    "                    input_data = np.load(\"data/data_\"+str(idx)+\".npz\")\n",
+    "                    data, presyn_input, markers, n_fea_occur, fea_time, fea_order = input_data['arr_0'], input_data['arr_1'], input_data['arr_2'], input_data['arr_3'], input_data['arr_4'], input_data['arr_5']\n",
+    "                except (FileNotFoundError, BadZipFile, KeyError):\n",
+    "                    pass\n",
     "            desired_spikes = sum(n_fea_occur * fea_idx)\n",
     "            V_t, spike_time = calculate_Vt(presyn_input, theta, current_omega)\n",
     "            tot_input = (current_omega[:,np.newaxis] * presyn_input).sum(axis=0)\n",
