--- a/training_pool/Data_Generation_with_Precomputed_Inputs.ipynb
+++ b/training_pool/Data_Generation_with_Precomputed_Inputs.ipynb
@@ -37,7 +37,8 @@
     "import numpy as np\n",
     "import multiprocessing\n",
     "from main_gen import gen_input_data, gen_features\n",
-    "import os.path"
+    "import os.path\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
@@ -82,7 +83,7 @@
    "source": [
     "Points to consider before executing the cell below:\n",
     "\n",
-    "a. Mean trial duration = T_null + n_fea*cf_mean*T_fea\n",
+    "a. Mean trial duration = T_null + n_fea (cf_mean) (T_fea)\n",
     "\n",
     "b. Values that are less than the syn_ratio of the synaptic kernel (postsynaptic potential) will be truncated.\n",
     "\n",
@@ -99,7 +100,8 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2017-09-26T15:31:20.719Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -112,15 +114,21 @@
     "time_ij = 0 #ms\n",
     "syn_ratio = 0.001 #ratio of synaptic kernel (postsynaptic potential) that is negligible\n",
     "data_set = 20000 #number of data sets required\n",
-    "n_cores = 6 #number of cores to use. 6-7 is about as much as the writing speed of a hard disk drive can handle\n",
+    "n_cores = 1 #number of cores to use. 6-7 is about as much as the writing speed of a hard disk drive can handle\n",
     "\n",
     "def data_gen(seed):\n",
     "    if not os.path.exists(\"data/data_\" + str(seed) + \".npz\"):\n",
     "        data, presyn_input, markers, n_fea_occur, fea_time, fea_order = gen_input_data(seed, features, T_null, n, fr, dt, tau_mem, tau_syn, time_ij, syn_ratio, n_fea, T_fea, cf_mean, marker_y, marker_height)\n",
     "        np.savez(\"data/data_\"+str(seed), data, presyn_input, markers, n_fea_occur, fea_time, fea_order) \n",
     "    \n",
-    "with multiprocessing.Pool(n_cores) as pool:\n",
-    "    pool.map(data_gen, range(data_set))"
+    "if n_cores > 1:\n",
+    "    with multiprocessing.Pool(n_cores) as pool:\n",
+    "        pool.map(data_gen, range(data_set))\n",
+    "else:\n",
+    "    for seed in range(data_set):\n",
+    "        clear_output(wait=True)\n",
+    "        data_gen(seed)\n",
+    "        print(\"Generating data for seed {}.\".format(seed))"
    ]
   }
  ],
@@ -140,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
