Corrected for bisect function and added random.seed

--- a/Theta_Critical_Gradient_Algorithm.ipynb
+++ b/Theta_Critical_Gradient_Algorithm.ipynb
@@ -112,7 +112,13 @@
     "        mid_theta, mid_spike = bisect(unweighted_input, theta_spikes, theta_range, smallest_range, omega)\n",
     "        return sorted(np.append(theta_list, mid_theta[1:-1]), reverse=True), sorted(np.append(spike_list, mid_spike[1:-1])) \n",
     "    else:\n",
-    "        return theta_list, spike_list"
+    "        if max(spike_list) - min(spike_list) == 1:\n",
+    "            return theta_list, spike_list\n",
+    "        else:\n",
+    "            new_smallest_range = smallest_range/10\n",
+    "            theta_range = [theta_list[0], theta_list[2]]\n",
+    "            mid_theta, mid_spike = bisect(unweighted_input, theta_spikes, theta_range, new_smallest_range, omega)\n",
+    "            return sorted(np.append(theta_list, mid_theta[1:-1]), reverse=True), sorted(np.append(spike_list, mid_spike[1:-1])) "
    ]
   },
   {
@@ -540,6 +546,7 @@
     "# To generate a list of desired feature indices\n",
     "fea_idx = desired_fea(n_fea, desired_n, cond = 0, multi = 0) \n",
     "\n",
+    "np.random.seed(int(1e9))\n",
     "latest_omega1F1S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
     "np.save(\"latest_omega1F1S_list\", latest_omega1F1S_list)"
    ]
@@ -575,6 +582,7 @@
     "# To generate a list of desired feature indices\n",
     "fea_idx = desired_fea(n_fea, desired_n, cond = 1, multi = 5) \n",
     "\n",
+    "np.random.seed(int(1e9))\n",
     "latest_omega1F5S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
     "np.save(\"latest_omega1F5S_list\", latest_omega1F5S_list)"
    ]
@@ -610,6 +618,7 @@
     "# To generate a list of desired feature indices\n",
     "fea_idx = desired_fea(n_fea, desired_n, cond = 0, multi = 0) \n",
     "\n",
+    "np.random.seed(int(1e9))\n",
     "latest_omega5F1S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
     "np.save(\"latest_omega5F1S_list\", latest_omega5F1S_list)"
    ]
@@ -645,6 +654,7 @@
     "# To generate a list of desired feature indices\n",
     "fea_idx = desired_fea(n_fea, desired_n, cond = 1, multi = 0) \n",
     "\n",
+    "np.random.seed(int(1e9))\n",
     "latest_omega5FmS_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
     "np.save(\"latest_omega5FmS_list\", latest_omega5FmS_list)"
    ]
@@ -680,6 +690,7 @@
     "# To generate a list of desired feature indices\n",
     "fea_idx = desired_fea(n_fea, desired_n, cond = 1, multi = 5) \n",
     "\n",
+    "np.random.seed(int(1e9))\n",
     "latest_omega5F5S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
     "np.save(\"latest_omega5F5S_list\", latest_omega5F5S_list)"
    ]
