--- a/Theta_Critical_Gradient_Algorithm.ipynb
+++ b/Theta_Critical_Gradient_Algorithm.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy import optimize\n",
+    "import multiprocessing\n",
     "rtol = 1e-5 # rtol from numpy.isclose\n",
     "from zipfile import BadZipFile\n",
     "from IPython.display import clear_output"
@@ -271,7 +272,7 @@
    },
    "outputs": [],
    "source": [
-    "def dV0t_dt(data, diff_kernel):    #eqn 32 first part\n",
+    "def dV0t_dt(data, diff_kernel, omega):    #eqn 32 first part\n",
     "    diff_kernel_array = np.zeros((n, data.shape[1]))\n",
     "    for neuron, ith_bin in zip(*np.where(data)):\n",
     "        kernel_len = min(len(diff_kernel), data.shape[1] - ith_bin)\n",
@@ -424,7 +425,7 @@
     "                theta_star, tx_list = theta_critical(presyn_input, num_spikes, desired_spikes, theta_range, 0.00001, current_omega)\n",
     "                C = C_tx(tx_list)\n",
     "                dVt_dw = dVtx_dwi(presyn_input, tx_list, C)\n",
-    "                sum_diff_kernel = dV0t_dt(data, diff_kernel)\n",
+    "                sum_diff_kernel = dV0t_dt(data, diff_kernel, current_omega)\n",
     "                A = A_cache(len(tx_list), sum_diff_kernel, tot_input, C, tx_list)\n",
     "                t_star = len(tx_list)-1\n",
     "                current_omega = update_w(current_omega, learning_rate, desired_spikes, num_spikes, sum_diff_kernel, tot_input, dVt_dw, A, C, tx_list, len(tx_list), t_star)\n",
@@ -693,6 +694,46 @@
     "np.random.seed(int(1e9))\n",
     "latest_omega5F5S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
     "np.save(\"latest_omega5F5S_list\", latest_omega5F5S_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.3 Multiple runs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n_cycles = 1000\n",
+    "data_sets = 19999\n",
+    "learning_rate = 0.00001\n",
+    "n_fea = 10 # Total number of features and distractors\n",
+    "desired_n = 5 # Number of desired features\n",
+    "\n",
+    "fea_idx_list = [desired_fea(n_fea, desired_n=1, cond=1, multi=5),\n",
+    "                desired_fea(n_fea, desired_n=5, cond=0, multi=0),\n",
+    "                desired_fea(n_fea, desired_n=5, cond=1, multi=0),\n",
+    "                desired_fea(n_fea, desired_n=5, cond=1, multi=5)\n",
+    "               ]\n",
+    "filenames = [\"latest_omega1F5S_list\",\n",
+    "             \"latest_omega5F1S_list\",\n",
+    "             \"latest_omega5FmS_list\",\n",
+    "             \"latest_omega5F5S_list\"\n",
+    "            ]\n",
+    "\n",
+    "def run_and_save(filename, fea_idx):\n",
+    "    res = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
+    "    np.save(filename, res)\n",
+    "\n",
+    "with multiprocessing.Pool(4) as pool:\n",
+    "    pool.starmap(run_and_save, zip(filenames, fea_idx_list))"
    ]
   }
  ],
