Changed omega filenames

--- a/Theta_Critical_Gradient_Algorithm.ipynb
+++ b/Theta_Critical_Gradient_Algorithm.ipynb
@@ -39,7 +39,6 @@
    "outputs": [],
    "source": [
     "def gen_omega(n, omega_coefficient):\n",
-    "    np.random.seed(100000)\n",
     "    omega = np.random.random(n)*omega_coefficient\n",
     "    return omega"
    ]
@@ -478,6 +477,7 @@
     "dif_kernel_len = 150 # length of differentiated kernel (postsynaptic potential --> filter), negligible tail is truncated\n",
     "\n",
     "# Generate the initial omega for each input neuron\n",
+    "np.random.seed(100000)\n",
     "omega = gen_omega(n, omega_coefficient)\n",
     "\n",
     "# Create the refractory kernel, and then remove the negligible tail\n",
@@ -503,15 +503,18 @@
    "source": [
     "The multispike_training function takes 5 arguments, which are current_omega, n_cycles, data_sets, fea_idx, and learning_rate, as inputs and return a list of updated omegas. The updated omega list stores the updated omega after every cycle of training (100 trials each). \n",
     "\n",
-    "current_omega: intial omega\n",
-    "n_cycles: number of training cycles required\n",
-    "data_sets: available number of precomputed data sets in the pool\n",
-    "fea_idx: indices of features that the multispike tempotron has to identify\n",
-    "learning_rate: the size of update after each error trial\n",
+    "a. current_omega: intial omega\n",
     "\n",
-    "Notes:\n",
+    "b. n_cycles: number of training cycles required\n",
     "\n",
-    "The learning_rate of 0.00001 was chosen according to the original publication (Robert Gütig, 2016)."
+    "c. data_sets: available number of precomputed data sets in the pool\n",
+    "\n",
+    "d. fea_idx: indices of features that the multispike tempotron has to identify\n",
+    "\n",
+    "e. learning_rate: the size of update after each error trial\n",
+    "\n",
+    "\n",
+    "Note: The learning_rate of 0.00001 was chosen according to the original publication (Robert Gütig, 2016)."
    ]
   },
   {
@@ -549,7 +552,7 @@
     "\n",
     "np.random.seed(int(1e9))\n",
     "latest_omega1F1S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
-    "np.save(\"latest_omega1F1S_list\", latest_omega1F1S_list)"
+    "np.save(\"theta_omega1F1S_list\", latest_omega1F1S_list)"
    ]
   },
   {
@@ -585,7 +588,7 @@
     "\n",
     "np.random.seed(int(1e9))\n",
     "latest_omega1F5S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
-    "np.save(\"latest_omega1F5S_list\", latest_omega1F5S_list)"
+    "np.save(\"theta_omega1F5S_list\", latest_omega1F5S_list)"
    ]
   },
   {
@@ -621,7 +624,7 @@
     "\n",
     "np.random.seed(int(1e9))\n",
     "latest_omega5F1S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
-    "np.save(\"latest_omega5F1S_list\", latest_omega5F1S_list)"
+    "np.save(\"theta_omega5F1S_list\", latest_omega5F1S_list)"
    ]
   },
   {
@@ -657,7 +660,7 @@
     "\n",
     "np.random.seed(int(1e9))\n",
     "latest_omega5FmS_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
-    "np.save(\"latest_omega5FmS_list\", latest_omega5FmS_list)"
+    "np.save(\"theta_omega5FmS_list\", latest_omega5FmS_list)"
    ]
   },
   {
@@ -693,7 +696,7 @@
     "\n",
     "np.random.seed(int(1e9))\n",
     "latest_omega5F5S_list = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
-    "np.save(\"latest_omega5F5S_list\", latest_omega5F5S_list)"
+    "np.save(\"theta_omega5F5S_list\", latest_omega5F5S_list)"
    ]
   },
   {
@@ -717,22 +720,24 @@
     "n_fea = 10 # Total number of features and distractors\n",
     "desired_n = 5 # Number of desired features\n",
     "\n",
-    "fea_idx_list = [desired_fea(n_fea, desired_n=1, cond=1, multi=5),\n",
+    "fea_idx_list = [desired_fea(n_fea, desired_n=1, cond=0, multi=0),\n",
+    "                desired_fea(n_fea, desired_n=1, cond=1, multi=5),\n",
     "                desired_fea(n_fea, desired_n=5, cond=0, multi=0),\n",
     "                desired_fea(n_fea, desired_n=5, cond=1, multi=0),\n",
     "                desired_fea(n_fea, desired_n=5, cond=1, multi=5)\n",
     "               ]\n",
-    "filenames = [\"latest_omega1F5S_list\",\n",
-    "             \"latest_omega5F1S_list\",\n",
-    "             \"latest_omega5FmS_list\",\n",
-    "             \"latest_omega5F5S_list\"\n",
+    "filenames = [\"theta_omega1F1S_list\",\n",
+    "             \"theta_omega1F5S_list\",\n",
+    "             \"theta_omega5F1S_list\",\n",
+    "             \"theta_omega5FmS_list\",\n",
+    "             \"theta_omega5F5S_list\"\n",
     "            ]\n",
     "\n",
     "def run_and_save(filename, fea_idx):\n",
     "    res = multispike_training(omega, n_cycles, data_sets, fea_idx, learning_rate)\n",
     "    np.save(filename, res)\n",
     "\n",
-    "with multiprocessing.Pool(4) as pool:\n",
+    "with multiprocessing.Pool(5) as pool:\n",
     "    pool.starmap(run_and_save, zip(filenames, fea_idx_list))"
    ]
   }
